# songs-api

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml
project/: .env.dev.sample  .env.prod.sample  Dockerfile  gunicorn_conf.py  pyproject.toml
project/app/: config.py  db.py  main.py
project/app/routers/songs/: models.py  songs.py
project/app/routers/status/: models.py  status.py
project/app/utilities/: db.py
project/data/: songs.json
project/migrations/: env.py
project/migrations/versions/: 0b3fcbcd3a7c_init.py  b575540aef8c_add_year.py
