[tool.poetry]
package-mode = false
name = "songs-api"
version = "0.1.0"
description = ""
authors = ["Erik Ferlanti <eferlanti@tacc.utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"

[tool.ruff]
select = ["E", "F", "I"]
fixable = ["ALL"]
exclude = [".git", ".ruff_cache", ".vscode"]
line-length = 300

[tool.pytest.ini_options]
addopts = "--verbose"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
